RESOLVED FIXED162332
[OpenWebRTC] Miscellaneous fixes
https://bugs.webkit.org/show_bug.cgi?id=162332
Summary [OpenWebRTC] Miscellaneous fixes
Philippe Normand
Reported 2016-09-21 01:53:59 PDT
Improved logging in the player, better audio sink support and a copy-paste error fix.
Attachments
patch (6.24 KB, patch)
2016-09-21 01:58 PDT, Philippe Normand
alex: review+
Philippe Normand
Comment 1 2016-09-21 01:58:05 PDT
Alejandro G. Castro
Comment 2 2016-09-21 02:30:22 PDT
Comment on attachment 289437 [details] patch LGTM
Philippe Normand
Comment 3 2016-09-21 02:46:49 PDT
Note You need to log in before you can comment on or make changes to this bug.